libs/modkit-macros/tests/ui/fail/lifecycle_missing_args.stderr
error: runner method `run` not found in impl
 --> tests/ui/fail/lifecycle_missing_args.rs:5:1
  |
5 | #[lifecycle(method="run")] // no such method in impl below
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `lifecycle` (in Nightly builds, run with -Z macro-backtrace for more info)
